care/force-app/main/default/objects/SLA_Thresholds_by_Country_Member_Type__mdt/SLA_Thresholds_by_Country_Member_Type__mdt.object-meta.xml
<CustomObject>
    <description>SLA Exceeded threshold - # Hours by Member Type Seeker/Provider/Others.</description>
    <label>SLA Thresholds by Country Member Type</label>
    <pluralLabel>SLA Thresholds by Country Member Type</pluralLabel>
</CustomObject>