care/force-app/main/default/objects/SLA_Thresholds_by_Country_Member_Type__mdt/fields/Seeker_SLA__c.field-meta.xml
<CustomField>
    <fullName>Seeker_SLA__c</fullName>
    <label>Seeker SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>