care/force-app/main/default/objects/SLA_Thresholds_by_Country_Member_Type__mdt/listViews/All_SLA_Thresholds.listView-meta.xml
<ListView>
    <fullName>All_SLA_Thresholds</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Default_SLA__c</columns>
    <columns>Provider_SLA__c</columns>
    <columns>Seeker_SLA__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <label>All SLA Thresholds</label>
    <language>en_US</language>
</ListView>